fix: map overflow

--- a/blocks/map/map.css
+++ b/blocks/map/map.css
@@ -1,21 +1,99 @@
 
+.section.map-container {
+    --bg-color: #016098;
+    --bg-gradient-end: var(--bg-color);
+    /* --bg-img: url(/content/dam/esrisites/en-us/about/about-regions/europe/images/streets-background-blue.jpg); */
+    --posX: center;
+    --posY: center;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+#grid-container {
+    width: 1440px;
+    max-width: 96vw;
+    padding-inline-end: 0;
+    padding-inline-start: 0;
+    margin-inline-end: auto;
+    margin-inline-start: auto;
+}
+
+.esri-view {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+canvas {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+.esri-view .esri-view-root {
+    position: relative;
+    flex: 1 1 100%;
+    border: none;
+    padding: 0;
+    margin: 0;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
+}
+
+.esri-view .esri-view-surface {
+    position: absolute;
+    border: none;
+    padding: 0;
+    margin: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    direction: ltr;
+}
+
+.esri-overlay-surface {
+    position: absolute;
+    border: none;
+    padding: 0;
+    margin: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+    pointer-events: none;
+}
+
+.esri-ui {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: border-box;
+    pointer-events: none;
+    overflow: hidden;
+}
 #eam-app-wrapper {
-    height: 575px;
+    height: 775px;
     padding: 0%;
-    transition: all .25s ease-in;
+    transition: all 0.25s ease-in;
 }
 
 #eam-map-wrapper {
     width: 100%;
-    height: 100%;
+    height: 775px;
     padding: 0;
-    /*transition: height .25s ease-in, width .25s ease-in, top .25s ease-in, left .25s ease-in;*/
+    transition: height .25s ease-in, width .25s ease-in, top .25s ease-in, left .25s ease-in;
     background-color: #f3f5f4;
 }
 
 #eam-map {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
 }
 
 #eam-app-wrapper .esri-popup__feature-buttons {
